NOD-724: wip [API Assistenza] Nuove API per assistenza su POSITION_PAYMENT_STATUS_SNAPSHOT
