# src/main/java/it/gov/pagopa/nodetsworker/resources/response/PositionPaymentSSInfo.java
@@ -9,7 +9,7 @@ import java.time.Instant;
 @NoArgsConstructor
 @AllArgsConstructor
 @Builder
-public class PositionPaymentStatusSnapshotInfo {
+public class PositionPaymentSSInfo {
 
     private String paFiscalCode;
     private String noticeId;
